--- a/test/dummy/app/components/dummy/molecule/cards/medium_component.sass
+++ b/test/dummy/app/components/dummy/molecule/cards/medium_component.sass
@@ -33,8 +33,10 @@
 
   &__card-text
     color: $shade-700
-    position: relative
-    z-index: 5
+
+    a
+      position: relative
+      z-index: 5
 
   &__card-image-wrap
     position: relative
