--- a/test/dummy/app/components/dummy/molecule/cards/small_component.sass
+++ b/test/dummy/app/components/dummy/molecule/cards/small_component.sass
@@ -21,6 +21,10 @@
   &__card-text
     color: $shade-700
 
+    a
+      position: relative
+      z-index: 5
+
   &__card-body
     padding: $grid-gutter-base * 4
     display: flex
